[package]
name = "rate-limit-scheduler"
description = "Maintain a HTTP request queue for rate-limited services in massively scalable environments"
version = "0.1.0"
authors = ["Moritz Gunz <moritz.gunz@gmail.com>"]

[dependencies]
clap = "2.32.0"
futures = "0.1.25"
httpdate = "0.3.2"
reqwest = "0.9.4"
serde = "1.0.80"
serde_derive = "1.0.80"
serde_json = "1.0.32"
tokio = "0.1.11"

[patch.crates-io]
tokio = { git = "https://github.com/NeoLegends/tokio", branch = "feature/throttle" }
